fixed light-bulb issue on mobile

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -197,7 +197,12 @@
         flex-direction: column;
 
     }
-/* 
+
+    .light-bulb {
+        padding: 0;
+    }
+
+    /* 
     #nav {
         background-color: #000000bb !important;
 
